# python-practise

./: README.md  compare_operator.py  indexing-slicing.py  input.py  len.py  list_methods.py  lists.py  pyproject.toml  strings_encoding.py  strings_extended.py  tuples_with_lists.py  typecasting.py
AI/: GPT.py  README.md
basics/: calculations.py  compare_operator.py  conditionals.py  dictionaries.py  else.py  functions.py  generators.py  hello.py  input.py  list_comprehension.py  list_matrix.py  loops.py  scopes.py  tuples.py
basics/tests/: test_calculations.py
dead-letter-queue-postal-worker/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
dead-letter-queue-postal-worker/readme/: architecture.iuml  program_sequence.iuml
dead-letter-queue-postal-worker/src/: main.py  properties_template.py
dead-letter-queue-postal-worker/src/activemq/: __init__.py  dlq.py  logfile.py  login.py  queues.py
dead-letter-queue-postal-worker/src/centraljira/: __init__.py  create_ticket.py  my_jira.py
dead-letter-queue-postal-worker/src/keepassxc/: __init__.py  keepassxc.py
dead-letter-queue-postal-worker/src/opensearch_logging/: __init__.py  log_to_logstash.py
dead-letter-queue-postal-worker/tests/test_activemq/: test_properties.py
dead-letter-queue-postal-worker/tests/test_centraljira/: test_properties.py
lab/: fahrenheit_to_celsius.py  string-info.py  using_lists.py
labs/: dictionaries.py  fizz-buzz-item.py  fizz-buzz.py  functions.py  string_extended.py  string_info.py  using-generators.py
officeStuff/excel/: README.md  excel.py  testsheet01.xlsx
(+3 files in other folders)
