[tool.poetry]
name = "python-practise"
version = "0.1.0"
description = "this is a practise package"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.3.7"
python-pptx = "^0.6.23"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
